<resources>
    <string name="app_name">S.R.Citas</string>
    <string name="label_login">Inicio de sesión</string>
    <string name="label_email">Correo electrónico</string>
    <string name="label_password">Contraseña</string>
    <string name="btn_login">Ingresar</string>
    <string name="label_register">¿Aún no te has registrado?</string>
    <string name="label_description">Ingresa los datos para iniciar sesión</string>
    <string name="register">Registro</string>
    <string name="register_description">Ingresa los datos solicitados para registrarte</string>
    <string name="name">Nombre completo</string>
    <string name="btn_register">Registrarse</string>
    <string name="please_fill_register_data">Por favor, completa tus datos</string>
    <string name="btn_create_appointment">Registrar Cita</string>
    <string name="btn_my_appointments">Mis Citas</string>
    <string name="btn_log_out">Cerrar sesión</string>
    <string name="welcome">Bienvenido</string>
    <string name="label_create_appointment">Reservar Cita</string>
    <string name="label_appt_description">Descripción</string>
    <string name="label_specialty">Especialidad</string>
    <string name="label_type">Tipo de Cita</string>
    <string name="radio_test">Exámen</string>
    <string name="radio_consultation">Consulta</string>
    <string name="radio_surgery">Operación</string>
    <string name="label_schedule_type">Tipo de Cita</string>
    <string name="btn_next">Siguiente</string>
    <string name="label_doctor">Médico</string>
    <string name="label_schedule_date">Fecha para la cita</string>
    <string name="btn_confirm">Confirmar</string>
    <string name="saved_appointment">Cita registada exitosamente</string>
    <string name="date_format">%1$d-%2$s-%3$s</string>
    <string name="item_appointment_id">Cita Médica %1$d</string>
    <string name="item_appointment_date">Atención el dia %1$s</string>
    <string name="item_appointment_time">A las %1$s</string>
    <string name="label_my_appointments">Mis Citas Médicas</string>
    <string name="label_account_registered">¿Ya tienes una cuenta?</string>
    <string name="press_back_again">Presione una vez más para salir</string>
    <string name="dialog_create_appointment_exit_title">¿Estás seguro que deseas salir?</string>
    <string name="dialog_create_appointment_exit_message">Si abandonas el registro, perderás los datos que hayas ingresado</string>
    <string name="dialog_create_appointment_exit_positive_btn">Salir</string>
    <string name="dialog_create_appointment_exit_negative_btn">Continuar registro</string>
    <string name="validate_appointment_description">La descripción es demasiado corta</string>
    <string name="label_schedule_time">Hora de la cita</string>
    <string name="label_confirm_appointment">Datos de la Cita</string>
    <string name="validate_appointment_date">Es necesario seleccionar una fecha de consulta</string>
    <string name="validate_appointment_time">Es necesario seleccionar una hora para la cita</string>
    <string name="error_loading_specialties">Ocurrió un problema al obtener las especialidades</string>
    <string name="error_loading_doctors">Ocurrió un problema al obtener los médicos</string>
    <string name="error_loading_hours">No se han podido obtener los horarios</string>
    <string name="label_select_doctor_and_date">Seleccione un médico y una fecha para ver las horas disponibles</string>
    <string name="label_not_available_hours">No hay horas disponibles para el médico en el dia seleccionado</string>
    <string name="error_login_response">Se obtuvo una respuesta inesperada del servidor. Intente más tarde</string>
    <string name="error_invalid_credentials">Las credenciales son inválidas. Revise e intente nuevamente</string>
    <string name="error_empty_credentials">Por favor, ingrese su correo y contraseña</string>
    <string name="welcome_name">Bienvenido %1$s</string>
    <string name="item_appointment_created_at">Registrada el dia %1$s con la siguiente descripción</string>
    <string name="create_appointment_success">Cita registrada correctamente</string>
    <string name="create_appointment_error">Ocurrió un error al registrar la cita médica. Intenta más tarde.</string>
    <string name="label_confirm_password">Confirmar contraseña</string>
    <string name="error_register_empty_fields">Por favor, complete todos los campos para continuar</string>
    <string name="error_passwords_do_not_match">Las contraseñas no coinciden</string>
    <string name="error_register_validation">Ocurrió un error en el registro</string>
    <string name="default_notification_channel_id" translatable="false">default_channel</string>
    <string name="title_message">My Appointments</string>
    <string name="msg_token_fcm">FCM Token: %s</string>
    <string name="btn_edit_profile">Editar perfil</string>
    <string name="label_edit_profile">Editar Perfil</string>
    <string name="label_name">Nombre</string>
    <string name="label_phone">Teléfono</string>
    <string name="label_address">Dirección</string>
    <string name="btn_confirm_profile">Guardar</string>
    <string name="profile_saved_message">Los cambios se guardaron correctamente</string>
    <string name="error_profile_name">El nombre ingresado debe ser mayor a 4 caracteres</string>
    <string name="no_appointments_message">No hay citas reservadas</string>
    <string name="phone_required_message">Es necesario registrar un teléfono en tu cuenta</string>
</resources>