<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardStep1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:contentPadding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/label_appt_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:elevation="@dimen/cardview_default_elevation"
            android:inputType="textAutoComplete"
            android:shadowRadius="8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/label_specialty"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <Spinner
            android:id="@+id/spinnerSpecialties"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/label_schedule_type"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <RadioGroup
            android:id="@+id/radioGroupType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/radioConsultation"
            android:layout_marginBottom="8dp">

            <RadioButton
                android:id="@+id/radioConsultation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_consultation" />

            <RadioButton
                android:id="@+id/radioTest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_test" />

            <RadioButton
                android:id="@+id/radioSurgery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_surgery" />
        </RadioGroup>

        <Button
            android:id="@+id/btnNext"
            style="@style/MenuButton"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:drawableRight="@drawable/ic_next"
            android:text="@string/btn_next" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
