<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical"
    android:paddingHorizontal="21dp"
    android:weightSum="10"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="12dp"
        android:text="@string/label_login"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="28dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:text="@string/label_description"
        android:textColor="@color/gray"
        android:textSize="16dp" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="5"
        android:background="@color/gray"
        android:elevation="@dimen/cardview_default_elevation"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/gray"
            android:orientation="horizontal"
            android:paddingHorizontal="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textEmailAddress"
                    android:background="@color/white"
                    android:elevation="@dimen/cardview_default_elevation"
                    android:hint="@string/label_email"
                    android:shadowRadius="8" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textPassword"
                    android:layout_marginTop="24dp"
                    android:background="@color/white"
                    android:elevation="@dimen/cardview_default_elevation"
                    android:hint="@string/label_password"
                    android:shadowRadius="8" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="48dp"
                    android:backgroundTint="@color/blue"
                    android:paddingHorizontal="24dp"
                    android:paddingVertical="12dp"
                    android:text="@string/btn_login" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="18dp"
                    android:text="@string/label_register" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</LinearLayout>