<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardStep3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="gone"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:contentPadding="12dp">

    <androidx.core.widget.NestedScrollView
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:layout_width="wrap_content"
                android:text="@string/label_confirm_appointment"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:text="@string/label_appt_description"/>

                <TextView
                    android:id="@+id/tvConfirmDescription"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    tools:text="Test descripcion" />
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:text="@string/label_type" />

                <TextView
                    android:id="@+id/tvConfirmType"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    tools:text="Consulta" />
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:text="@string/label_specialty" />

                <TextView
                    android:id="@+id/tvConfirmSpecialty"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    tools:text="Especialidad A" />
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:text="@string/label_doctor" />

                <TextView
                    android:id="@+id/tvConfirmDoctor"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    tools:text="Medico test" />
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:text="@string/label_schedule_date" />

                <TextView
                    android:id="@+id/tvConfirmScheduledDate"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    tools:text="2021-02-01" />
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:text="@string/label_schedule_time" />

                <TextView
                    android:id="@+id/tvConfirmScheduledTime"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    tools:text="10:00 AM" />
            </LinearLayout>

            <Button
                style="@style/MenuButton"
                android:id="@+id/btnConfirm"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:text="@string/btn_confirm" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.cardview.widget.CardView>